--- a/experiments/repetition_code_learning.ipynb
+++ b/experiments/repetition_code_learning.ipynb
@@ -11,7 +11,7 @@
     "# from itertools import combinations, permutations, product\n",
     "\n",
     "import mldec.pipelines.utils as utils\n",
-    "from mldec.bit_tools import kbits, binarr\n",
+    "\n",
     "\n",
     "# train a neural network using pytorch\n",
     "import torch\n",
@@ -19,14 +19,7 @@
     "from torch.utils.data import DataLoader, TensorDataset\n",
     "import copy\n",
     "from torch import nn, optim\n",
-    "from sklearn.model_selection import KFold\n",
-    "\n",
-    "# generate a PCM for a repetition code on n bits\n",
-    "def repetition_pcm(n):\n",
-    "    out = []\n",
-    "    for i in range(n-1):\n",
-    "        out.append([0]*i + [1, 1] + [0]*(n-i-2))\n",
-    "    return np.array(out, dtype=np.uint8)\n"
+    "from sklearn.model_selection import KFold\n"
    ]
   },
   {
@@ -53,111 +46,14 @@
    "execution_count": 135,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def create_dataset(n):\n",
-    "    \"\"\"Construct a dataset of all bitstrings (errors) paired with their syndromes\n",
-    "\n",
-    "    Returns:\n",
-    "        X: (2**n, n-k) array of syndromes\n",
-    "        Y: (2**n, n) array of bitstrings\n",
-    "    \"\"\"\n",
-    "    H = repetition_pcm(n)\n",
-    "    all_bitstrings = binarr(n)\n",
-    "    all_syndromes = all_bitstrings @ H.T % 2\n",
-    "    X, Y = (all_syndromes, all_bitstrings)\n",
-    "    return X, Y\n",
-    "\n",
-    "# define a biased bitflip model\n",
-    "# for simplicitly, lets say the first n/2 bits have p=0.1, the last n/2 have p=0.05\n",
-    "def bitstring_prob_v1(s, n, p1, p2, permute=None):\n",
-    "    \"\"\"Create a noise model where the first n//2 bits have prob. p1 of flipping, the last n//2 have prob. p2.\n",
-    "    \n",
-    "    ARgs:\n",
-    "        s: (n_data, n) array of bitstrings.\n",
-    "    Warning: if the difference in bias is too much, the weight-ordering of bitstrings \n",
-    "     is no longer the same as likelihood ordering. \n",
-    "    \"\"\"\n",
-    "    if permute is not None:\n",
-    "        s = s[:,permute]\n",
-    "    p_first = np.prod(p1*s[:,:n//2] +(1-p1)*(1-s[:,:n//2]), axis=1)\n",
-    "    p_second = np.prod(p2*s[:,n//2:] + (1-p2)*(1-s[:,n//2:]), axis=1)\n",
-    "    return np.multiply(p_first, p_second)\n",
-    "\n",
-    "\n",
-    "def sample_bitstring_v1(n, p1, p2, n_data):\n",
-    "    \"\"\"Sample bitstrings from the biased bitflip model v1.\n",
-    "    \n",
-    "    Args:\n",
-    "        n: number of bits\n",
-    "        p1, p2: bitflip probabilities for the first and second half of the bits\n",
-    "        n_data: number of samples to generate\n",
-    "    \n",
-    "    Returns:\n",
-    "        (n_data, n) array of bitstrings\n",
-    "    \"\"\"\n",
-    "    assert n % 2 == 0\n",
-    "    bitstrings = np.random.rand(n_data, n) < np.concatenate([p1*np.ones(n//2), p2*np.ones(n//2)])\n",
-    "    return bitstrings\n",
-    "\n",
-    "\n",
-    "def optimal_decoding(n, p1, p2):\n",
-    "    \"\"\"brute-force compute the optimal decoding success probability for this biased bitflip model.\"\"\"\n",
-    "    X, Y = create_dataset(n)\n",
-    "    probs = bitstring_prob_v1(Y, n, p1, p2)\n",
-    "    lookup = {}\n",
-    "    for x, w in zip(X, probs):\n",
-    "        # finding the maximum conditional p(y|x); for a classical code there are only 2 possible syndromes per error\n",
-    "        if tuple(x) in lookup:\n",
-    "            lookup[tuple(x)] = max(lookup[tuple(x)], w)\n",
-    "        else:\n",
-    "            lookup[tuple(x)] = w\n",
-    "    return sum(lookup.values())"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class HiddenLayer(nn.Module):\n",
-    "    def __init__(self, input_dim, output_dim):\n",
-    "        super(HiddenLayer, self).__init__()\n",
-    "        self.layer = nn.Linear(input_dim, output_dim)\n",
-    "        # self.act = nn.Tanh()\n",
-    "        self.act = nn.ReLU()\n",
-    "    \n",
-    "    def forward(self, x):\n",
-    "        return self.act(self.layer(x))\n",
-    "\n",
-    "\n",
-    "class FFNNlayered(nn.Module):\n",
-    "    \"Core encoder is a stack of N layers\"\n",
-    "\n",
-    "    def __init__(self, input_dim, hidden_dim, output_dim, N_layers):\n",
-    "        super(FFNNlayered, self).__init__()\n",
-    "        if isinstance(hidden_dim, int):\n",
-    "            hidden_dim = [hidden_dim]*N_layers\n",
-    "        self.first =  HiddenLayer(input_dim, hidden_dim[0])\n",
-    "        self.layers = nn.ModuleList([HiddenLayer(hidden_dim[i], hidden_dim[i+1]) for i in range(N_layers-1)])\n",
-    "        self.output = nn.Linear(hidden_dim[-1], output_dim)\n",
-    "        self.act_output = nn.Sigmoid()\n",
-    "        # Custom initialization for the output layer\n",
-    "        self.init_output_layer()\n",
-    "\n",
-    "    def init_output_layer(self):\n",
-    "        # Initialize weights to bias our output\n",
-    "        init_val = -0.1\n",
-    "        nn.init.constant_(self.output.weight, init_val)\n",
-    "        nn.init.constant_(self.output.bias, init_val)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = self.first(x)\n",
-    "        for layer in self.layers:\n",
-    "            x = layer(x)\n",
-    "        x = self.output(x)\n",
-    "        return self.act_output(x)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -165,40 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class WeightedSequenceLoss(nn.Module):\n",
-    "    \"\"\"Weight individual training examples\n",
     "\n",
-    "    \"\"\"\n",
-    "    def __init__(self, LossFn: nn.Module = nn.NLLLoss, avg: str = \"token\"):\n",
-    "        super().__init__()\n",
-    "        self.avg = avg\n",
-    "        self.crit = LossFn(reduction=\"none\")\n",
-    "        if avg == 'token':\n",
-    "            self._reduce = self._mean\n",
-    "        else:\n",
-    "            self._reduce = self._sum\n",
-    "\n",
-    "    def _mean(self, loss):\n",
-    "        return loss.mean(axis=1)\n",
-    "\n",
-    "    def _sum(self, loss):\n",
-    "        return loss.sum(axis=1)\n",
-    "\n",
-    "    def forward(self, inputs: torch.Tensor, targets: torch.Tensor, weight: torch.Tensor) -> torch.Tensor:\n",
-    "        \"\"\"Evaluate some loss over a sequence.\n",
-    "        :param inputs: torch.FloatTensor, [B, T] The scores from the model. Batch First\n",
-    "        :param targets: torch.LongTensor, [B, T] The labels.\n",
-    "        :param weight: sample weights [B, ]\n",
-    "        :returns: torch.FloatTensor, The loss.\n",
-    "        \"\"\"\n",
-    "        total_sz = targets.nelement()\n",
-    "        batchsz = weight.shape[0]\n",
-    "        loss = self.crit(inputs.view(total_sz), targets.view(total_sz)).view(batchsz, -1)  # [B, T]\n",
-    "        loss = torch.dot(self._reduce(loss), weight.type_as(loss))\n",
-    "        return loss\n",
-    "\n",
-    "    def extra_repr(self):\n",
-    "        return f\"reduction={self.avg}\"\n",
     "    \n",
     "\n",
     "def evaluate_model(model, X, Y, print_results=False):\n",
@@ -224,58 +87,7 @@
     "#     compare = ((Y_pred + Y) % 2).sum(axis=1) == 0\n",
     "#     weights = bitstring_prob_v1(Y, n, p1, p2)\n",
     "#     acc = (compare * weights).sum()\n",
-    "#     return acc\n",
-    "\n",
-    "def weighted_test_acc(model, X, Y, weights):\n",
-    "    \"\"\"All X, Y, weights are tensors.\"\"\"\n",
-    "    Y_pred = model(X).int() # get predictions from activations\n",
-    "    compare = ((Y_pred + Y) % 2).sum(axis=1) == 0\n",
-    "    acc = (compare * weights).sum()\n",
-    "    return acc.item()\n",
-    "\n",
-    "def weighted_test_loss(model, X, Y, weights):\n",
-    "    \"\"\"All X, Y, weights are tensors.\"\"\"\n",
-    "    criterion = WeightedSequenceLoss(LossFn=nn.BCELoss)\n",
-    "    Y_pred = model(X)\n",
-    "    res = criterion(Y_pred, Y, weights)\n",
-    "    return res.item()\n",
-    "    \n",
-    "def sample_histogram(probs, m):\n",
-    "    # This is used to simulate a dataset; since we have discrete data,\n",
-    "    # we do not sample n_train data, rather we reweight a loss function\n",
-    "    # according to a histogram of n_train samples from probs.\n",
-    "    sample = np.random.choice(len(probs), m, p=probs)\n",
-    "    hist = np.zeros(len(probs))\n",
-    "    for s in sample:\n",
-    "        hist[s] += 1\n",
-    "    return hist / m\n",
-    "\n",
-    "def sample_virtual_XY(probs, m, n, H):\n",
-    "    \"\"\"Sample virtual dataset.\n",
-    "    \n",
-    "    The virtual dataset is a tuple (X, Y, weights).\n",
-    "\n",
-    "    args:\n",
-    "        probs: (2**n,) array of probabilities of each bitstring\n",
-    "        m: number of samples to draw\n",
-    "        n: number of bits\n",
-    "        H: parity check matrix\n",
-    "    Returns:\n",
-    "        Y is (N, n) array, where N is the number of unique samples and n is the number of bits.\n",
-    "            Each row of Y is a unique bitstring that appeared in sampling.\n",
-    "        X is (N, n-1) array computed via the parity check matrix.\n",
-    "        weights: (N,) array of weights for each sample.\n",
-    "        hist: (2**n,) array of counts of each bitstring in the dataset, ordered correctly. This is \n",
-    "            so that we can build a complete trainings et iteratively when batching training.\n",
-    "\n",
-    "    \"\"\"\n",
-    "    hist = sample_histogram(probs, m) \n",
-    "    base = binarr(n)\n",
-    "    Y = np.array([base[i] for i in range(len(probs)) if hist[i] > 0])\n",
-    "    X = Y @ H.T % 2\n",
-    "    weights = np.array([hist[i] for i in range(len(probs)) if hist[i] > 0])\n",
-    "    weights = weights / weights.sum()\n",
-    "    return X, Y, weights, hist"
+    "#     return acc"
    ]
   },
   {
@@ -429,19 +241,6 @@
     "learning_rate = 0.0003\n",
     "n_train = 64\n",
     "\n",
-    "# prepare specifically the good examples\n",
-    "X_train, Y_train = create_dataset(n)\n",
-    "probs = bitstring_prob_v1(Y_train, n, p1, p2)\n",
-    "good_examples = {}\n",
-    "for x, y, w in zip(X_train, Y_train, probs):\n",
-    "    if tuple(x) in good_examples:\n",
-    "        if w > good_examples[tuple(x)][1]:\n",
-    "            good_examples[tuple(x)] = (y, w)\n",
-    "    else:\n",
-    "        good_examples[tuple(x)] = (y, w)\n",
-    "Y_train = np.array([v[0] for v in good_examples.values()])\n",
-    "X_train = np.array([k for k in good_examples.keys()])\n",
-    "probs = np.array([v[1] for v in good_examples.values()])\n",
     "\n",
     "\n",
     "model = FFNNlayered(input_dim=n-1, hidden_dim=16, output_dim=n, N_layers=4)\n",
