--- a/src/mldec/models/scratch.ipynb
+++ b/src/mldec/models/scratch.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
     "    'p': 0.15,\n",
     "    'alpha': 0.33,\n",
     "    'pcm': toy_problem_data.repetition_pcm(n),\n",
-    "    \"sos_eos\": None,\n",
+    "    \"sos_eos\": (0, 0),\n",
     "}\n",
     "X, Y, weights = toy_problem_data.create_dataset_training(n, dataset_config)\n",
     "weights_np = weights.numpy()\n",
@@ -62,10 +62,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from mldec.models.baselines import RepetitionCodeLookupTable, RepetitionCodeMinimumWeight\n",
     "\n",
     "\n",
-    "lookup = RepetitionCodeLookupTable(n)\n",
-    "lookup.train_on_histogram(X, Y, downsampled_weights)\n",
     "\n",
     "mld = RepetitionCodeLookupTable(n)\n",
     "mld.train_on_histogram(Xgood, Ygood, weightsgood)\n",
@@ -76,15 +75,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lookup train: 0.9998999834060669\n",
-      "lookup test: 0.9964802265167236\n",
+      "torch.Size([120, 7])\n",
+      "torch.Size([256, 7]) torch.Size([256, 10]) torch.Size([120, 10])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Xb.shape)\n",
+    "print(X.shape, Y.shape, Ypred.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lookup = RepetitionCodeLookupTable(n)\n",
+    "lookup.train_on_histogram(X, Y, downsampled_weights)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lookup train: 0.9994999170303345\n",
+      "lookup test: 0.9970260858535767\n",
       "minimum weight: 0.997134804725647\n",
       "optimal: 0.9988806843757629\n"
      ]
