--- a/src/mldec/old/toric_code_data.ipynb
+++ b/src/mldec/old/toric_code_data.ipynb
@@ -17,7 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mldec.codes import pauli_decoding_stim, toric_code\n",
+    "\n",
+    "\n",
+    "from mldec.datasets import toric_code_data\n",
+    "\n",
     "import stim\n",
     "\n",
     "from itertools import chain, combinations\n",
