fixed mwpm, updated runcards, staged to go!

--- a/src/mldec/datasets/toric_code_workbook.ipynb
+++ b/src/mldec/datasets/toric_code_workbook.ipynb
@@ -22,15 +22,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.10890275 0.05827309 0.06375975 0.08003794 0.02708494 0.07165783\n",
+      " 0.02283591 0.0800562  0.03437773]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "config = {'p': 0.05, 'var': 0.03}\n",
+    "p = config.get('p')\n",
+    "# alpha = config.get('alpha')\n",
+    "var = config.get('var')\n",
+    "np.random.seed(222) # just for reproducibility\n",
+    "p_samp = np.random.normal(p, var, size=n)\n",
+    "print(p_samp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from mldec.datasets import toric_code_data\n",
+    "from mldec.models import baselines\n",
+    "from mldec.utils import evaluation\n",
     "\n",
     "config = {'p': 0.1, 'var': 0.03}\n",
+    "# config = {'p': 0.06, 'var': 0.02}\n",
     "n = 9\n",
     "X, Y, weights = toric_code_data.create_dataset_training(n, config, cache=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# X, Y, weights = toric_code_data.uniform_over_good_examples(n, config, cache=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Minimum weight decoder validation accuracy: 0.99845290184021\n"
+     ]
+    }
+   ],
+   "source": [
+    "minimum_weight_decoder = baselines.MinimumWeightPerfectMatching()\n",
+    "minimum_weight_decoder.make_decoder(X, Y)\n",
+    "preds = minimum_weight_decoder.predict(X).numpy()\n",
+    "# i = 0\n",
+    "# j = 0\n",
+    "# for x, y, pred, wt in zip(X, Y, preds, weights):\n",
+    "#     print(x, y, pred, wt)\n",
+    "#     i += 1\n",
+    "#     if i == 4:\n",
+    "#         print()\n",
+    "#         i = 0\n",
+    "#     j += 1\n",
+    "#     if j > 20:\n",
+    "#         break\n",
+    "minimum_weight_val_acc = evaluation.weighted_accuracy(minimum_weight_decoder, X, Y, weights)\n",
+    "print(f\"Minimum weight decoder validation accuracy: {minimum_weight_val_acc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([249, 8]) torch.Size([249, 2]) torch.Size([249]) (1024,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "X, Y, weightsb, hist = toric_code_data.sample_virtual_XY(weights, 1000, n, config, cache=True)\n",
+    "print(X.shape, Y.shape, weightsb.shape, hist.shape)"
    ]
   },
   {
