ready for xformer verification runs

--- a/src/mldec/datasets/toric_code_workbook.ipynb
+++ b/src/mldec/datasets/toric_code_workbook.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# autoreload magic\n",
     "%load_ext autoreload\n",
@@ -22,43 +13,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.10890275 0.05827309 0.06375975 0.08003794 0.02708494 0.07165783\n",
-      " 0.02283591 0.0800562  0.03437773]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "config = {'p': 0.05, 'var': 0.03}\n",
-    "p = config.get('p')\n",
-    "# alpha = config.get('alpha')\n",
-    "var = config.get('var')\n",
-    "np.random.seed(222) # just for reproducibility\n",
-    "p_samp = np.random.normal(p, var, size=n)\n",
-    "print(p_samp)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from mldec.datasets import toric_code_data\n",
-    "from mldec.models import baselines\n",
-    "from mldec.utils import evaluation\n",
+    "# from mldec.datasets import toric_code_data\n",
+    "# from mldec.models import baselines\n",
+    "# from mldec.utils import evaluation\n",
+    "# import numpy as np\n",
+    "# config = {'p': 0.05, 'var': 0.03}\n",
+    "# p = config.get('p')\n",
+    "# # alpha = config.get('alpha')\n",
+    "# var = config.get('var')\n",
+    "# np.random.seed(222) # just for reproducibility\n",
+    "# p_samp = np.random.normal(p, var, size=n)\n",
+    "# print(p_samp)\n",
     "\n",
-    "config = {'p': 0.1, 'var': 0.03}\n",
-    "# config = {'p': 0.06, 'var': 0.02}\n",
-    "n = 9\n",
-    "X, Y, weights = toric_code_data.create_dataset_training(n, config, cache=True)"
+    "# config = {'p': 0.1, 'var': 0.03}\n",
+    "# # config = {'p': 0.06, 'var': 0.02}\n",
+    "# n = 9\n",
+    "# X, Y, weights = toric_code_data.create_dataset_training(n, config, cache=True)\n",
+    "# # X, Y, weights = toric_code_data.uniform_over_good_examples(n, config, cache=True)\n",
+    "# minimum_weight_decoder = baselines.MinimumWeightPerfectMatching()\n",
+    "# minimum_weight_decoder.make_decoder(X, Y)\n",
+    "# preds = minimum_weight_decoder.predict(X).numpy()\n",
+    "# minimum_weight_val_acc = evaluation.weighted_accuracy(minimum_weight_decoder, X, Y, weights)\n",
+    "# print(f\"Minimum weight decoder validation accuracy: {minimum_weight_val_acc}\")\n",
+    "\n",
+    "# X, Y, weightsb, hist = toric_code_data.sample_virtual_XY(weights, 1000, n, config, cache=True)\n",
+    "# print(X.shape, Y.shape, weightsb.shape, hist.shape)"
    ]
   },
   {
@@ -67,65 +50,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X, Y, weights = toric_code_data.uniform_over_good_examples(n, config, cache=True)"
+    "# FIXME: i neeed to change all the imports and whatever since the refactor."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minimum weight decoder validation accuracy: 0.99845290184021\n"
-     ]
-    }
-   ],
-   "source": [
-    "minimum_weight_decoder = baselines.MinimumWeightPerfectMatching()\n",
-    "minimum_weight_decoder.make_decoder(X, Y)\n",
-    "preds = minimum_weight_decoder.predict(X).numpy()\n",
-    "# i = 0\n",
-    "# j = 0\n",
-    "# for x, y, pred, wt in zip(X, Y, preds, weights):\n",
-    "#     print(x, y, pred, wt)\n",
-    "#     i += 1\n",
-    "#     if i == 4:\n",
-    "#         print()\n",
-    "#         i = 0\n",
-    "#     j += 1\n",
-    "#     if j > 20:\n",
-    "#         break\n",
-    "minimum_weight_val_acc = evaluation.weighted_accuracy(minimum_weight_decoder, X, Y, weights)\n",
-    "print(f\"Minimum weight decoder validation accuracy: {minimum_weight_val_acc}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([249, 8]) torch.Size([249, 2]) torch.Size([249]) (1024,)\n"
-     ]
-    }
-   ],
-   "source": [
-    "X, Y, weightsb, hist = toric_code_data.sample_virtual_XY(weights, 1000, n, config, cache=True)\n",
-    "print(X.shape, Y.shape, weightsb.shape, hist.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "import numpy as np\n",
+    "import stim\n",
+    "from mldec.codes import toric_code\n",
+    "\n",
     "x_generators, z_generators, Hx, Hz = toric_code.rotated_surface_code_stabilizers(3)\n",
     "generators = x_generators + z_generators\n",
     "t = stim.Tableau.from_stabilizers(generators, allow_redundant=True, allow_underconstrained=True)\n",
@@ -293,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +257,8 @@
     "    noise_model = make_variance_noise_model(n, noise_config)\n",
     "\n",
     "    \n",
-    "lst, mle_lookup, mle_acc, err_prs = build_lst_lookup_and_mle(generators_S, generators_T, generators_L, Hx, Hz, noise_model)\n"
+    "# build a lookup table for LST in the toric code. This is noise-model-independent\n",
+    "lst = toric_code.build_lst_lookup(L, cache=True)\n"
    ]
   },
   {
