weighted MWPM, toric code ana

--- a/src/mldec/datasets/toric_code_workbook.ipynb
+++ b/src/mldec/datasets/toric_code_workbook.ipynb
@@ -13,15 +13,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.10890275, 0.05827309, 0.06375975, 0.08003794, 0.02708494,\n",
+       "       0.07165783, 0.02283591, 0.0800562 , 0.03437773])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# from mldec.datasets import toric_code_data\n",
-    "# from mldec.models import baselines\n",
-    "# from mldec.utils import evaluation\n",
-    "# import numpy as np\n",
-    "# config = {'p': 0.05, 'var': 0.03}\n",
+    "from mldec.datasets import toric_code_data\n",
+    "from mldec.models import baselines\n",
+    "from mldec.utils import evaluation\n",
+    "import numpy as np\n",
+    "config = {'p': 0.05, 'var': 0.03}\n",
+    "p_samp = toric_code_data.make_variance_noise_model(9, config)\n",
+    "display(p_samp)\n",
+    "\n",
+    "\n",
     "# p = config.get('p')\n",
     "# # alpha = config.get('alpha')\n",
     "# var = config.get('var')\n",
