adjust hypers for reps_toric

--- a/src/mldec/analysis/toric_analysis.ipynb
+++ b/src/mldec/analysis/toric_analysis.ipynb
@@ -164,10 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ORIGINAL 10000 TRAIN\n",
     "# target_var1 = \"toric-code-var-exp-v2/transformer_toric_code_results.csv\"\n",
     "# target_var2 = \"toric-code-var-exp-v2.1/transformer_toric_code_results.csv\"\n",
     "# df_var1 = pd.read_csv(target_var1)\n",
@@ -180,12 +181,12 @@
     "# df_novar2 = pd.read_csv(target_novar2)\n",
     "# df_novar = pd.concat([df_novar1, df_novar2], ignore_index=True)\n",
     "\n",
-    "# INFINITE DATA LOAD\n",
-    "target_var1 = \"toric-code-var-exp-v3-infinitedata/transformer_toric_code_results.csv\"\n",
-    "df_var = pd.read_csv(target_var1)\n",
+    "# INFINITE DATA APRIL 4 EXPERIMENT\n",
+    "# target_var1 = \"toric-code-var-exp-v3-infinitedata/transformer_toric_code_results.csv\"\n",
+    "# df_var = pd.read_csv(target_var1)\n",
     "\n",
-    "target_novar1 = \"toric-code-novar-exp-v3-infinitedata/transformer_toric_code_results.csv\"\n",
-    "df_novar = pd.read_csv(target_novar1)\n"
+    "# target_novar1 = \"toric-code-novar-exp-v3-infinitedata/transformer_toric_code_results.csv\"\n",
+    "# df_novar = pd.read_csv(target_novar1)\n"
    ]
   },
   {
