--- a/src/mldec/models/scratch.ipynb
+++ b/src/mldec/models/scratch.ipynb
@@ -2,13 +2,98 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "# reload magic\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.02963425 0.0127577  0.01458658 0.02001265 0.00236165 0.01721928\n",
+      " 0.0009453  0.02001873 0.00479258]\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(222)\n",
+    "p = 0.01\n",
+    "var = 0.01\n",
+    "n = 9\n",
+    "p_samp = np.random.normal(p, var, size=n)\n",
+    "print(p_samp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\peter\\Desktop\\projects\\mldec\\src\\mldec\\datasets\\toric_code_data.py:185: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  Xb_tensor = torch.tensor(X_full, dtype=torch.float32)\n",
+      "C:\\Users\\peter\\Desktop\\projects\\mldec\\src\\mldec\\datasets\\toric_code_data.py:186: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  Yb_tensor = torch.tensor(Y_full, dtype=torch.float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from mldec.datasets import toric_code_data\n",
+    "# sample virtual XY\n",
+    "config = {'n': 9, 'var': 0.03, 'p': 0.05, 'beta': 1.75}\n",
+    "X, Y, probs = toric_code_data.create_dataset_training(n, config, cache=True)\n",
+    "Xb, Yb, weightsb, histb = toric_code_data.sample_virtual_XY(probs.numpy(), 1994, n, config, cache=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1024"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(Xb)"
    ]
   },
   {
