MWPM implemented for cycles

--- a/src/mldec/models/scratch.ipynb
+++ b/src/mldec/models/scratch.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reload magic\n",
     "%load_ext autoreload\n",
@@ -22,11 +13,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torch\n",
+    "from mldec.models import baselines\n",
+    "from mldec.utils import evaluation\n",
+    "from mldec.datasets import reps_toric_code_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time to sample 100000 shots: 0.014313936233520508\n",
+      "time to generate batch: 6.314815998077393\n",
+      "time to convert to torch: 2.2159361839294434\n"
+     ]
+    }
+   ],
+   "source": [
+    "validation_dataset_config = {\n",
+    "    'p': 0.004,\n",
+    "    'repetitions': 3,\n",
+    "    'code_size': 3,\n",
+    "    'beta': 1, \n",
+    "}\n",
+    "device = torch.device(\"cpu\")\n",
+    "n_test = 100000\n",
+    "\n",
+    "data_val, triv_val, stim_data_val, observable_flips_val = reps_toric_code_data.sample_dataset(n_test, validation_dataset_config, device)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "minweight acc: 0.99898\n"
+     ]
+    }
+   ],
+   "source": [
+    "_, _, detector_error_model = reps_toric_code_data.make_sampler(validation_dataset_config)\n",
+    "mwpm_decoder = baselines.CyclesMinimumWeightPerfectMatching(detector_error_model)\n",
+    "minimum_weight_val_acc_nontrivial = evaluation.evaluate_mwpm(stim_data_val, observable_flips_val, mwpm_decoder).item()\n",
+    "minimum_weight_val_acc = (minimum_weight_val_acc_nontrivial + triv_val) / n_test\n",
+    "print(\"minweight acc: {}\".format(minimum_weight_val_acc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(minimum_weight_val_acc)"
    ]
   },
   {
