last commit before CLEANUP

--- a/src/mldec/datasets/toric_code_workbook.ipynb
+++ b/src/mldec/datasets/toric_code_workbook.ipynb
@@ -325,11 +325,14 @@
     "\n",
     "zero = min(bad_prs)\n",
     "\n",
-    "ax.fill_between(weights, important_prs, unimportant_prs, label='unimportant', facecolor=\"grey\", edgecolor='k', alpha=0.3)\n",
+    "ax.fill_between(weights, important_prs, unimportant_prs, \n",
+    "                label='unimportant', facecolor=\"grey\", edgecolor='k', alpha=0.3)\n",
     "# ax.plot(weights, unimportant_prs, label='unimportant', c='k', alpha=1)\n",
-    "ax.fill_between(weights, np.ones_like(bad_prs) * zero, bad_prs, label='bad', facecolor=\"r\",  alpha=0.1)\n",
+    "ax.fill_between(weights, np.ones_like(bad_prs) * zero, bad_prs, \n",
+    "                label='bad', facecolor=\"r\",  alpha=0.1)\n",
     "ax.plot(weights[bad_prs>0], bad_prs[bad_prs>0], alpha=1, c='r') # bold line\n",
-    "ax.fill_between(weights, np.ones_like(bad_prs) * zero, bad_prs, facecolor='none', hatch=\"x\", edgecolor='r', alpha=.8)  #hatching nonalpha\n",
+    "ax.fill_between(weights, np.ones_like(bad_prs) * zero, bad_prs, \n",
+    "                facecolor='none', hatch=\"x\", edgecolor='r', alpha=.8)  #hatching nonalpha\n",
     "\n",
     "ax.fill_between(weights, np.ones_like(important_prs) * zero, important_prs, label='important', facecolor='g', edgecolor='g', alpha=0.6, )\n",
     "ax.plot(weights[important_prs>0], important_prs[important_prs>0], c='g', alpha=1 )\n",
