put in the data

--- a/src/mldec/analysis/make_fig3_and_appendix.ipynb
+++ b/src/mldec/analysis/make_fig3_and_appendix.ipynb
@@ -350,7 +350,7 @@
     "\n",
     "Try to find a general pattern between training set size and runtime\n",
     "\n",
-    "Analysis note: For $\\beta=3$ with $8\\times 10^6$ training data, I think we hit a memory limit that kills a lot of processes sporadically. This means that a lot of jobs didn't finish, but nonetheless these $\\beta=3$ jobs all did well so the ones that I keep are necessarily _underreporting_ the performance of $\\beta=3$ and this cannot constitute cherry-picking. For this reason, I am allowing these data to stay. One exception is a single run that only lasted 10 epochs, which obviously isn't valid for reporting."
+    "Analysis note: For $\\beta=3$ with $8\\times 10^6$ training data, I think we hit a memory limit that kills a lot of processes sporadically. This means that a lot of jobs didn't finish, but nonetheless these $\\beta=3$ jobs all did well so the ones that I keep are necessarily _underreporting_ the performance of $\\beta=3$ and so this cannot constitute cherry-picking. For this reason, I am allowing these data to stay. One exception is a single run that only lasted 10 epochs, which obviously isn't valid for reporting."
    ]
   },
   {
@@ -363,20 +363,20 @@
     "# recovered_df_v02 = recover_dataframce(\"reps-toric-code-exp-v0.2\")\n",
     "# df_v02 = load_dataframe_with_metadata(recovered_df_v02, \"reps-toric-code-exp-v0.2\")\n",
     "\n",
-    "dir_a = \"reps-toric-code-exp-v1.0a-unfinished\"\n",
+    "dir_a = \"reps-toric-code-exp-v1.0a\"\n",
     "recovered_df_a = recover_dataframce(dir_a)\n",
     "df_a = load_dataframe_with_metadata(recovered_df_a, dir_a)\n",
-    "dir_b = \"reps-toric-code-exp-v1.0b-unfinished\"\n",
+    "dir_b = \"reps-toric-code-exp-v1.0b\"\n",
     "recovered_df_b = recover_dataframce(dir_b)\n",
     "df_b = load_dataframe_with_metadata(recovered_df_b, dir_b)\n",
     "# After the first two runs, i fixed the file writing bug, so we can use the \n",
     "# original recorded data by setting new_results=False\n",
-    "dir_c = \"reps-toric-code-exp-v1.0c-unfinished\"\n",
+    "dir_c = \"reps-toric-code-exp-v1.0c\"\n",
     "scrape_and_save_hypers_from_unfinished_run(dir_c)\n",
     "recovered_df_c = recover_dataframce(dir_c, new_results=False, use_scraped_hypers=True)\n",
     "df_c = load_dataframe_with_metadata(recovered_df_c, dir_c, new_results=False, use_scraped_hypers=True)\n",
     "df_c = df_c[df_c[\"total_epochs\"] >= 50]\n",
-    "dir_d = \"reps-toric-code-exp-v1.0d-unfinished\"\n",
+    "dir_d = \"reps-toric-code-exp-v1.0d\"\n",
     "scrape_and_save_hypers_from_unfinished_run(dir_d)\n",
     "recovered_df_d = recover_dataframce(dir_d, new_results=False, use_scraped_hypers=True)\n",
     "df_d = load_dataframe_with_metadata(recovered_df_d, dir_d, new_results=False, use_scraped_hypers=True)\n",
