fix buggy data gen

--- a/src/mldec/analysis/make_fig3_and_appendix.ipynb
+++ b/src/mldec/analysis/make_fig3_and_appendix.ipynb
@@ -95,7 +95,7 @@
    "source": [
     "#### Load unfinished runs\n",
     "\n",
-    "The below code is specifically for experiments from April 24, as unfinished runs."
+    "The below code is specifically for experiments from April 24, as unfinished runs. Many of these died, presumably due to problems with memory, not sure though."
    ]
   },
   {
